fix: fix overflow-y info card

--- a/src/components/asideBar/AsideBar.css
+++ b/src/components/asideBar/AsideBar.css
@@ -36,7 +36,7 @@ span {
 
 .bg-animation:hover {
     transition: 250ms;
-    background-color:#5D6D7E ;
+    background-color: #198754;
 }
 
 .arrow-animation i{
